--- a/.github/workflows/build_test.yaml
+++ b/.github/workflows/build_test.yaml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        python-version: [ '3.6', '3.7', '3.8', '3.9' ]
+        python-version: [ '3.9' ]
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
@@ -42,5 +42,6 @@ jobs:
       - name: run examples with Eradication from pip install using snakemake
         run: |
           pip install snakemake
+          pip install pulp==2.7.0
           snakemake --cores all
         working-directory: ./examples
