--- a/.github/workflows/build_test_publish.yaml
+++ b/.github/workflows/build_test_publish.yaml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        python-version: [ '3.6']
+        python-version: [ '3.9']
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
@@ -48,6 +48,7 @@ jobs:
       - name: run examples with Eradication from pip install using snakemake
         run: |
           pip install snakemake
+          pip install pulp==2.7.0
           snakemake --cores all
         working-directory: ./examples
       - name: Push version bump
