--- a/.github/workflows/build_test.yaml
+++ b/.github/workflows/build_test.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Build and install package
         uses: ./.github/actions/build-install-package
         with:
-          package_file: 'package_setup.py'
+          package_file: 'setup.py'
       - name: run tests
         run: python -m unittest discover .
         working-directory: ./tests
