Make COMPS_USER & COMPS_PASSWORD standard

--- a/.github/workflows/build_test_publish.yaml
+++ b/.github/workflows/build_test_publish.yaml
@@ -36,14 +36,14 @@ jobs:
         working-directory: ./tests
       - name: cache camps staging login
         run: |
-          python .dev_scripts/create_auth_token_args.py -c https://comps2.idmod.org -u ${{ secrets.COMPS_USER }} -p ${{ secrets.COMPS_USER_PASSWORD }}
+          python .dev_scripts/create_auth_token_args.py -c https://comps2.idmod.org -u ${{ secrets.COMPS_USER }} -p ${{ secrets.COMPS_PASSWORD }}
         working-directory: ./
       - name: run workflow tests
         run: python test_sim.py
         working-directory: ./tests/sim_tests
       - name: cache camps login
         run: |
-          python .dev_scripts/create_auth_token_args.py -c https://comps.idmod.org -u ${{ secrets.COMPS_USER }} -p ${{ secrets.COMPS_USER_PASSWORD }}
+          python .dev_scripts/create_auth_token_args.py -c https://comps.idmod.org -u ${{ secrets.COMPS_USER }} -p ${{ secrets.COMPS_PASSWORD }}
         working-directory: ./
       - name: run examples with Eradication from pip install using snakemake
         run: |
